# Mini-SIEM

./: .gitignore  Dockerfile  LICENSE  README.md  alert.py  alerts.txt  collector.py  dashboard.py  database.py  detector.py  main.py  parser.py  pyproject.toml  report.py  requirements.txt  security_alerts.csv  security_events.csv  security_report.txt  siem_logger.py  threat_intel.py  whitelist.json
core/: alert.py  detector.py  report.py  whitelist.py
data/: siem.db  threat_intel.txt
mini_siem/: __init__.py  __main__.py  main.py
mini_siem/core/: alert.py  collector.py  dashboard.py  database.py  detector.py  report.py  siem_logger.py  threat_intel.py
reports/: alerts.txt  security_alerts.csv  security_events.csv  security_report.txt
tests/: test_database.py  test_detector.py  test_parser.py
